Add relevant comments and future work

--- a/kinesis_swe_us.conf
+++ b/kinesis_swe_us.conf
@@ -1176,11 +1176,11 @@ xkb_compatibility "complete" {
     };
 };
 
-default xkb_symbols "my_symbols" {
+default xkb_symbols "kin" {
     include "pc+us+se:2+inet(evdev)+group(alt_caps_toggle)"
 
-    name[group1]="English (US)";
-    name[group2]="Swedish";
+    name[group1]="us";
+    name[group2]="se";
 
     override key <BKSL> {
         type[group2]= "FOUR_LEVEL",
